--- a/public/front/css/styles.css
+++ b/public/front/css/styles.css
@@ -4635,6 +4635,8 @@ body.search-is-visible {
     font-weight: 300;
     line-height: var(--vspace-1);
     padding-left: 3.2rem;
+    flex: 0 0 310px;
+    max-width: 310px;
 }
 
 .s-content__pagenav>div {
