--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -30,25 +30,44 @@
     text-overflow: ellipsis;
 }
 
+.textTruncateOne {
+    display: -webkit-box;
+    -webkit-line-clamp: 1;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.fl-separator {
+    border-top-width: 5px;
+    border-top-style: solid;
+    border-top-color: #5c6252;
+    max-width: 100%;
+    margin: auto;
+}
+.fl-module-content {
+    margin-top: 20px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    margin-left: 20px;
+}
 
 #social-links {
     max-width: 500px;
 }
 #social-links ul li {
     display: inline-block;
-}      
+}
 #social-links ul {
     margin-left: 0px;
-}    
+}
 #social-links ul li a {
-    
     margin: 10px;
     font-size: 30px;
     color: #222;
 }
 
-.updateDate{
-   
+.updateDate {
     font-size: 9px;
 }
 
@@ -57,15 +76,70 @@
     object-fit: cover;
 }
 
+.publisherAndCategory {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.mainPostImage {
+    max-width: 100%;
+    height: 500px;
+}
+
+.cardTextSize {
+    height: 55px;
+    line-height: 25px;
+}
+
+.recentPostImage{
+    flex: 2;
+}
+
+
+
+@media screen and (max-width: 1200px) {
+    .s-content__pagenav{
+        flex-direction: column;
+    }
+
+    .recentPostImage{
+        flex: 1;
+    }
+}
+
+
 
 @media screen and (max-width: 1400px) {
     .s-content__entry-meta {
         flex-direction: column;
     }
-    .s-content__entry-meta .entry-author{
-        flex:  0;
+    .s-content__entry-meta .entry-author {
+        flex: 0;
     }
     .tagtext {
         font-size: 20px;
     }
+}
+
+@media screen and (max-width: 500px) {
+    .publisherAndCategory {
+        display: block;
+    }
+    #shareIcon {
+        display: block !important;
+    }
+
+    #social-links ul li a {
+        margin: 5px;
+        font-size: 25px;
+        color: #222;
+    }
+    .mainPostImage {
+        height: 250px;
+    }
+    .recentPostImage{
+        flex: 2;
+    }
+    
 }
